# shared-memory-array

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_test.yml  publish_documentation.yml  publish_github_release.yml  publish_pypi_release.yml
docs/: requirements.txt
docs/examples/: basic_example.py  basic_example_context.py  context_manager_example.py  multiprocessing_example.py
docs/source/: conf.py  index.rst
shared_memory_array/: __init__.py  shared_memory_array.py
src/shmanager/: __init__.py  shmanager_numpy.py
tests/: test_basic_shmanager_numpy.py  test_context_shmanager_numpy.py  test_extra_shmanager_numpy.py
