[build-system]
requires = ["flit_core", "flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "shared-memory-array"
dynamic = ['version']
description = "Efficient NumPy array sharing across processes using shared memory"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
    {name = "Francesco Strino", email = "francesco.strino@pcmgf.com"},
    {name = "Fabio Parisi", email = "fabio.parisi@pcmgf.com"},
]

maintainers = [
    {name = "Francesco Strino", email = "francesco.strino@pcmgf.com"},
    {name = "Fabio Parisi", email = "fabio.parisi@pcmgf.com"},
]
keywords = [
    "numpy",
    "shared-memory",
    "multiprocessing",
    "parallel",
    "array",
    "performance",
    "zero-copy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.20.0",
]


[tool.flit.sdist]
exclude = [".gitignore"]

[tool.setuptools_scm]
write_to = "shared_memory_array/_version.py"

[project.optional-dependencies]
dev = ["pytest", "flit_core", "flit_scm"]

[project.urls]
Documentation = "https://github.com/PCMGF-Limited/shared-memory-array"
Repository = "https://github.com/PCMGF-Limited/shared-memory-array"
"Bug Tracker" = "https://github.com/PCMGF-Limited/shared-memory-array/issues"

